--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "jade": "~0.28.1",
-    "express": "~3.0.6"
+    "express": "~3.0.6",
+    "moment": "~1.7.2",
+    "grunt": "~0.3.17",
+    "grunt-coffee": "0.0.6"
   },
   "devDependencies": {},
   "scripts": {
