--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "express": "~3.0.6",
     "moment": "~1.7.2",
     "grunt": "~0.3.17",
-    "grunt-coffee": "0.0.6"
+    "grunt-coffee": "0.0.6",
+    "ical": "0.0.6"
   },
   "devDependencies": {},
   "scripts": {
