--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "moment": "~1.7.2",
     "grunt": "~0.3.17",
     "grunt-coffee": "0.0.6",
-    "ical": "0.0.6"
+    "ical": "0.0.6",
+    "carrier": "~0.1.10",
+    "icalevent": "0.0.2"
   },
   "devDependencies": {},
   "scripts": {
